Started working on eliminating illegal moves using bitboards. Successfully dealt with creating attack bitboards for detecting check. The move generator can detect legal moves for double check and knows how to capture pieces to resolve single check. However, I still need to deal with blocking checks from sliding pieces and also accounting for pinned pieces and en passant rules. Not sure if this will actually speed up my code, but it's a step in the right direction.